docs: Complete code comments